=== What's New in 2.8 Since 2.7

This section covers the changes made from version 2.7 to version 2.8.
For changes in earlier version, see <<history>>.

[[x28-kafka-client]]
==== Kafka Client Version

This version requires the 2.8.0 `kafka-clients`.

[[x28-ooo-commits]]
==== Out of Order Manual Commits

The listener container can now be configured to accept manual offset commits out of order (usually asynchronously).
The container will defer the commit until the missing offset is acknowledged.
See <<ooo-commits>> for more information.